# symmetries

./: .gitignore  CMakeLists.txt  README.md  main.cpp
application/: AboutWindow.cpp  AboutWindow.h  CMakeLists.txt  CalculateWindow.cpp  CalculateWindow.h  ExpressionParser.cpp  ExpressionParser.h  ImportTensorWindow.cpp  ImportTensorWindow.h  MainWindow.cpp  MainWindow.h  MatrixElementWidget.cpp  MatrixElementWidget.h  MatrixViewWidget.cpp  MatrixViewWidget.h  OperationItems.cpp  OperationItems.h  OperationRequirementWidget.cpp  OperationRequirementWidget.h  OutputViewWidget.cpp  OutputViewWidget.h  TabsWidget.cpp  TabsWidget.h  TensorListWidget.cpp  TensorListWidget.h  TensorParser.cpp  TensorParser.h  TensorPropWindow.cpp  TensorPropWindow.h  TensorStore.cpp  TensorStore.h  TensorTypes.cpp  TensorTypes.h  main.cpp
application/resources/: resources.qrc
common/: CMakeLists.txt  Commons.h.in
core/: AffineConnection.cpp  AffineConnection.h  AffineLieAlgebra.cpp  AffineLieAlgebra.h  CMakeLists.txt  Calculation.cpp  Calculation.h  DifferentialEquation.cpp  DifferentialEquation.h  DifferentialExpression.cpp  DifferentialExpression.h  DifferentialItem.cpp  DifferentialItem.h  Equation.cpp  Equation.h  Exceptions.h  Expression.cpp  Expression.h  Item.cpp  Item.h  MatrixVector.h  MatrixVectorExp.cpp  MatrixVectorExp.h  SimpleExpression.cpp  SimpleExpression.h  SimpleItem.cpp  SimpleItem.h  VariablesMap.cpp  VariablesMap.h
file/: CMakeLists.txt  FileReader.cpp  FileReader.h
tests/: metric_tensor.txt  torsion_tensor.txt
